# fortune-hs

./: README.md  fortune.1  fortune.cabal  fortune.hs
app/: fortune.hs
