cabal-version:      2.4
name:               fortune
version:            0.1.0.0

synopsis: Writes pseudorandom quips to the standard output
description: fortune is a reimplementation of the BSD "fortune" program,
             which writes pseudorandomly selected quips, i.e., fortunes,
             to the standard output.
bug-reports: https://github.com/varikvalefor/fortune-hs
license: BSD-3-Clause
author: Varik Valefor
maintainer: varikvalefor@aol.com
copyright: (c) Varik Valefor 2021.
category: Game

executable fortune
  main-is: fortune.hs
  build-depends:
    base ^>=4.14.1.0,
    split,
    random
  hs-source-dirs: app
  default-language: Haskell2010
